[package]
name = "regexm"
version = "0.2.1"
authors = ["Takayuki Maeda <takoyaki0316@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Rust macro for writing regex pattern matching."
homepage = "https://github.com/TaKO8Ki/regexm"
repository = "https://github.com/TaKO8Ki/regexm"
documentation = "https://docs.rs/regexm"
readme = "README.md"
keywords = ["regex"]

[dependencies]
regex = "1"
